<resources>
    <string name="app_name">Contact Book</string>
    <string name="customers">Customers</string>
    <string name="add_customer">Add Customer</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="contacts">Contacts</string>
    <string name="add_contact">Add Contact</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="type_of_contact">Type of contact</string>
    <string name="view_contacts">View Contacts</string>
    <string name="contact_list">Contact List</string>
</resources>